Add Highscore, WIP:Login, Add Generel thins

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost,1432;Initial Catalog=MindOfSpace;Integrated Security=False;Persist Security Info=False;user id=SA;password=Start123;"
+  },
+  "PGenerator" :
+  {
+    "Salt": "MindOfSpaceSalt123"
   }
+
 }
