--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost,1432;Initial Catalog=MindOfSpace;Integrated Security=False;Persist Security Info=False;user id=SA;password=Start123;"
+  }
 }
