--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "AppSettings": {
+    "JwtKey": "cc8a4b93-eb56-4969-a553-5e7f227476dd",
+    "JwtExpireHours": "1",
+    "Cors": [
+      "http://localhost:5001",
+      "http://localhost:8000"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,7 +17,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost,1432;Initial Catalog=MindOfSpace;Integrated Security=False;Persist Security Info=False;user id=SA;password=Start123;"
   },
-  "PGenerator" :
+  "Encrypt" :
   {
     "Salt": "MindOfSpaceSalt123"
   }
